test_translator/tests/data/checkpoint_2/errors/01_missing_set_entrypoint/tests.py
assert make_set() == {1, 2, 3}
